--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,24 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>Microphone access is required for making voice calls</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Camera access is required for video calls</string>
+	<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
+		</dict>
+
+	<key>NSPhotoLibraryAddUsageDescription</key>
+<string>This app needs access to save photos to your photo library</string>
+
+<!-- Also ensure this key is present in the same file -->
+<key>NSAppTransportSecurity</key>
+<dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+</dict>	
 </dict>
 </plist>
