--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.0
   intl: ^0.18.1
   dio: ^5.4.0
+  flutter_tts: ^3.8.0
 
 dev_dependencies:
   flutter_test:
